// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimerBadge /> snapshots renders with all props 1`] = `
<TimerBadge
  className="rootClass"
  countdownStart={604800}
  countdownText="Срок действия истечёт через"
  dataAttrs={
    Object {
      "root": Object {
        "data-testid": "root",
      },
      "text": Object {
        "data-testid": "text",
      },
      "timer": Object {
        "data-testid": "timer",
      },
    }
  }
  expirationDate={2022-04-25T14:50:15.000Z}
  expirationDateText="Действительно до"
  hasPrefix={true}
>
  <div
    className="mfui-timer-badge mfui-timer-badge_theme_grey rootClass"
    data-testid="root"
  >
    <div
      className="mfui-timer-badge__icon-container"
    >
      <test-file-stub
        className="mfui-timer-badge__icon"
      />
    </div>
    <div
      className="mfui-timer-badge__text"
      data-testid="text"
    >
      <Timer
        actualRemainingTime={3556800}
        additionalText="Действительно до"
        dataAttrs={
          Object {
            "root": Object {
              "data-testid": "timer",
            },
          }
        }
        expirationDate={2022-04-25T14:50:15.000Z}
        showCountdown={false}
      >
        <div
          className="mfui-timer"
          data-testid="timer"
        >
          <span>
            Действительно до
             
          </span>
          <span>
            25 апреля 2022
          </span>
        </div>
      </Timer>
    </div>
  </div>
</TimerBadge>
`;

exports[`<TimerBadge /> snapshots renders with countdown 1`] = `
<TimerBadge
  expirationDate={2022-03-15T15:50:15.000Z}
  hasPrefix={true}
>
  <div
    className="mfui-timer-badge mfui-timer-badge_theme_red"
  >
    <div
      className="mfui-timer-badge__icon-container"
    >
      <test-file-stub
        className="mfui-timer-badge__icon"
      />
    </div>
    <div
      className="mfui-timer-badge__text"
    >
      <Timer
        actualRemainingTime={18000}
        additionalText="Закончится через"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        expirationDate={2022-03-15T15:50:15.000Z}
        showCountdown={true}
      >
        <div
          className="mfui-timer"
        >
          <span>
            Закончится через
             
          </span>
          <span>
            5 ч
          </span>
        </div>
      </Timer>
    </div>
  </div>
</TimerBadge>
`;

exports[`<TimerBadge /> snapshots renders with expired time 1`] = `
<TimerBadge
  expirationDate={2022-03-15T09:50:15.000Z}
>
  <div
    className="mfui-timer-badge mfui-timer-badge_theme_red"
  >
    <div
      className="mfui-timer-badge__icon-container mfui-timer-badge__icon-container_shadow"
    >
      <test-file-stub
        className="mfui-timer-badge__icon"
      />
    </div>
    <div
      className="mfui-timer-badge__text"
    >
      Время действия истекло
    </div>
  </div>
</TimerBadge>
`;

exports[`<TimerBadge /> snapshots renders with last hour 1`] = `
<TimerBadge
  expirationDate={2022-03-15T11:20:15.000Z}
  hasPrefix={true}
>
  <div
    className="mfui-timer-badge mfui-timer-badge_theme_red"
  >
    <div
      className="mfui-timer-badge__icon-container mfui-timer-badge__icon-container_shadow"
    >
      <test-file-stub
        className="mfui-timer-badge__icon"
      />
    </div>
    <div
      className="mfui-timer-badge__text"
    >
      <Timer
        actualRemainingTime={1800}
        additionalText="Закончится через"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        expirationDate={2022-03-15T11:20:15.000Z}
        showCountdown={true}
      >
        <div
          className="mfui-timer"
        >
          <span>
            Закончится через
             
          </span>
          <span>
            30 мин
          </span>
        </div>
      </Timer>
    </div>
  </div>
</TimerBadge>
`;

exports[`<TimerBadge /> snapshots renders with require props 1`] = `
<TimerBadge
  expirationDate={2022-04-25T14:50:15.000Z}
>
  <div
    className="mfui-timer-badge mfui-timer-badge_theme_grey"
  >
    <div
      className="mfui-timer-badge__icon-container"
    >
      <test-file-stub
        className="mfui-timer-badge__icon"
      />
    </div>
    <div
      className="mfui-timer-badge__text"
    >
      <Timer
        actualRemainingTime={3556800}
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        expirationDate={2022-04-25T14:50:15.000Z}
        showCountdown={false}
      >
        <div
          className="mfui-timer"
        >
          <span>
            25 апреля 2022
          </span>
        </div>
      </Timer>
    </div>
  </div>
</TimerBadge>
`;
